trunk/Archive2/f2/5c89e18147ee3b/output
main.cpp: In function 'int main()':
main.cpp:7:20: warning: unused variable 'p' [-Wunused-variable]
     boost::thread *p = new boost::thread("thread1");
                    ^
In file included from /usr/local/include/boost/thread/thread_only.hpp:22:0,
                 from /usr/local/include/boost/thread/thread.hpp:12,
                 from main.cpp:3:
/usr/local/include/boost/thread/detail/thread.hpp: In instantiation of 'void boost::detail::thread_data<F>::run() [with F = const char*]':
main.cpp:9:1:   required from here
/usr/local/include/boost/thread/detail/thread.hpp:117:17: error: expression cannot be used as a function
                 f();
                 ^
